# adme_model

./: README.md  pyproject.toml
prototype/: ADME_model.ipynb
