[tool.poetry]
name = "adme-model"
version = "0.1.0"
description = "Model to predict adme"
authors = ["Huvinesh Rajendran <huvinesh@teleme.co>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
polars = "^0.20.31"
jupyter = "^1.0.0"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
